remove java 11 requirement

--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
 	<name>SpringRestPOC</name>
 	<description>Spring POC project for Spring Boot</description>
 
-	<properties>
-		<java.version>11</java.version>
-	</properties>
+	<!--<properties>-->
+		<!--<java.version>11</java.version>-->
+	<!--</properties>-->
 
 	<dependencies>
 		<dependency>
