--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#uncomment after importing spring data dependencies
+#database=mysql
+#spring.datasource.url=jdbc:mysql://mysql.yanni-test.svc:3306/petclinic
+#spring.datasource.username=yanni
+#spring.datasource.password=yanni
