--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -52,7 +52,7 @@ env:
   PROJECT_ID: "edge-retail-374401"
   GAR_LOCATION: "us-central1"
   REPOSITORY: "image-analysis-docker-native"
-  SERVICE: "image-analysis-native"
+  SERVICE: "spring-poc-rest"
   REGION: "us-central1"
 
 jobs:
@@ -99,8 +99,8 @@ jobs:
         
       - name: Build and Push Container
         run: |-
-          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker build -t "gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push "gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
 
       # END - Docker auth and build
 
