--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -51,7 +51,7 @@ on:
 env:
   PROJECT_ID: "edge-retail-374401"
   GAR_LOCATION: "us-central1"
-  REPOSITORY: "image-analysis-docker-native"
+  REPOSITORY: "applications"
   SERVICE: "spring-poc-rest"
   REGION: "us-central1"
 
@@ -99,8 +99,8 @@ jobs:
         
       - name: Build and Push Container
         run: |-
-          docker build -t "gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker push "gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/applications/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/applications/${{ env.SERVICE }}:${{ github.sha }}"
 
       # END - Docker auth and build
 
