--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -101,10 +101,12 @@ jobs:
           password: ${{ secrets.SA_CREDS }}
       - name: Run build script
         run: |-
-          cd /opt
+          mkdir ./opt
+          cd opt
           curl -s -L https://cdn.azul.com/zulu/bin/zulu17.44.17-ca-crac-jdk17.0.8-linux_x64.tar.gz | tar xz
           mv zulu* jdk
-          export PATH=/opt/jdk/bin:$$PATH
+          cd ../
+          export PATH=./opt/jdk/bin:$$PATH
           ./checkpoint.sh
         shell: bash
         
