--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -101,6 +101,7 @@ jobs:
           password: ${{ secrets.SA_CREDS }}
       - name: Run build script
         run: |-
+          pwd
           cd /opt
           curl -s -L https://cdn.azul.com/zulu/bin/zulu17.44.17-ca-crac-jdk17.0.8-linux_x64.tar.gz | tar xz
           mv zulu* jdk
