--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -102,12 +102,13 @@ jobs:
       - name: Run build script
         run: |-
           pwd
-          mkdir ./opt
-          cd opt
+          mkdir /opt
+          cd /opt
           curl -s -L https://cdn.azul.com/zulu/bin/zulu17.44.17-ca-crac-jdk17.0.8-linux_x64.tar.gz | tar xz
           mv zulu* jdk
-          cd ../
-          export PATH=./opt/jdk/bin:$$PATH
+          cd /home/runner/work/SpringRestPOC/SpringRestPOC
+          export PATH=/opt/jdk/bin:$$PATH
+          echo $PATH
           ./checkpoint.sh
         shell: bash
         
