--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -106,8 +106,9 @@ jobs:
           curl -s -L https://cdn.azul.com/zulu/bin/zulu17.44.17-ca-crac-jdk17.0.8-linux_x64.tar.gz | tar xz
           mv zulu* jdk
           cd /home/runner/work/SpringRestPOC/SpringRestPOC
-          export PATH=/opt/jdk/bin:$$PATH
+          export PATH=/opt/jdk/bin:$PATH
           echo $PATH
+          ls -la
           ./checkpoint.sh
         shell: bash
         
