--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -71,7 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
 #       - name: Google Auth
 #         id: auth
@@ -99,6 +99,13 @@ jobs:
           registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
           username: _json_key
           password: ${{ secrets.SA_CREDS }}
+
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          version: 'latest'
+          java-version: '17'
+          components: 'native-image'
+
       - name: Run build script
         run: |-
           pwd
